[refactor] presentation Dto AdoptionRecommendResponses 생성