@@ -5,11 +5,11 @@ import java.util.List;
 import java.util.stream.Collectors;
 import kr.co.pawong.pwbe.adoption.application.domain.Adoption;
 import kr.co.pawong.pwbe.adoption.application.service.dto.response.AdoptionCard;
-import kr.co.pawong.pwbe.adoption.application.service.dto.response.AdoptionRecommendResponse;
 import kr.co.pawong.pwbe.adoption.application.service.dto.response.SliceAdoptionSearchResponses;
 import kr.co.pawong.pwbe.adoption.application.service.port.AdoptionQueryRepository;
 import kr.co.pawong.pwbe.adoption.application.service.port.ShelterInfoPort;
 import kr.co.pawong.pwbe.adoption.application.service.support.AdoptionCardMapper;
+import kr.co.pawong.pwbe.adoption.presentation.controller.dto.response.AdoptionRecommendResponses;
 import kr.co.pawong.pwbe.adoption.presentation.port.AdoptionQueryService;
 import kr.co.pawong.pwbe.shelter.presentation.controller.dto.ShelterInfoDto;
 import lombok.RequiredArgsConstructor;
@@ -52,19 +52,7 @@ public class AdoptionQueryServiceImpl implements AdoptionQueryService {
     }
 
     @Override
-    public ShelterInfoDto findShelterInfoByAdoptionId(Long adoptionId) {
-        // 1) AdoptionEntity에서 careRegNo 조회
-        String careRegNo = adoptionQueryRepository.findCareRegNoByAdoptionId(adoptionId);
-        if (careRegNo == null) {
-            log.warn("careRegNo not found for adoptionId: {}", adoptionId);
-            return null; // 또는 예외 throw
-        }
-        // 2) ShelterAdapter 통해 실제 Shelter 컨텍스트에 질의
-        return shelterInfoPort.getShelterInfo(careRegNo);
-    }
-
-    @Override
-    public List<AdoptionRecommendResponse> getRecommendAdoptions() {
+    public AdoptionRecommendResponses getRecommendAdoptions() {
         LocalDate today = LocalDate.now();
         List<Adoption> adoptions = adoptionQueryRepository.findTop12ActiveByNoticeEdt(today);
         // 각 입양 정보의 noticeEdt와 activeState 로그 출력
@@ -75,9 +63,23 @@ public class AdoptionQueryServiceImpl implements AdoptionQueryService {
                     adoption.getActiveState());
         }
 
-        return adoptions.stream()
-                .map(AdoptionRecommendResponse::from)
-                .collect(Collectors.toList());
+        List<AdoptionCard> adoptionCards = adoptions.stream()
+                .map(AdoptionCardMapper::toAdoptionCard)
+                .toList();
+
+        return new AdoptionRecommendResponses(adoptionCards);
+    }
+
+    @Override
+    public ShelterInfoDto findShelterInfoByAdoptionId(Long adoptionId) {
+        // 1) AdoptionEntity에서 careRegNo 조회
+        String careRegNo = adoptionQueryRepository.findCareRegNoByAdoptionId(adoptionId);
+        if (careRegNo == null) {
+            log.warn("careRegNo not found for adoptionId: {}", adoptionId);
+            return null; // 또는 예외 throw
+        }
+        // 2) ShelterAdapter 통해 실제 Shelter 컨텍스트에 질의
+        return shelterInfoPort.getShelterInfo(careRegNo);
     }
 
 }
